Правки доков + загрузка вебзипа и отправка команды по вебзипу на станцию
